Fix code whitespace in HTML man pages

--- a/doc/man/mandoc.css
+++ b/doc/man/mandoc.css
@@ -57,6 +57,7 @@ pre, tt, code {
   -ms-hyphens: none;
   -webkit-hyphens: none;
   hyphens: none;
+  white-space: nowrap;
 }
 
 ul, ol, dl {
